ArgoCD-Apps/sslip.io.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-domain-service
  namespace: knative
  labels:
    app: default-domain
    app.kubernetes.io/component: default-domain-job
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: "1.7.1"
spec:
  selector:
    app: default-domain
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP

---
